<resources>
    <string name="app_name">SmartGrocery</string>
    <string name="lable_login_name">Name</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="lable_login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up_button">Sign up</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="product_item_default_lable">Label</string>
</resources>
